--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BASE_URL_AUTH=http://localhost:4000
-REACT_APP_API_URL=http://localhost:4000
+VITE_BASE_URL_AUTH=https://parakh-ai1.onrender.com
+REACT_APP_API_URL=https://parakh-ai1.onrender.com
